2007-06-02  Christian Neumair  <cneumair@gnome.org>

	* src/xdgmime.[ch]: Move xdg_mime_type_unknown to .rodata.
	* src/xdgmime.h: Add XDG_ENTRY() entry for xdg_mime_dump.
	GTK+ resync.

	* src/xdgmime.c: (_xdg_mime_alias_list_lookup): Initialize mime_type
	to NULL instead of 0, GNOME #341812. Thanks to Kjartan Maraas
	<kmaraas@gnome.org>.

	* src/xdgmime.[ch]: (xdg_mime_media_type_equal),
	(_xdg_mime_media_type_equal): Add private version of
	xdg_mime_media_type_equal that doesn't call xdg_mime_init(), use it in
	_xdg_mime_mime_type_subclass.

2007-06-02  Christian Neumair  <cneumair@gnome.org>

	* src/xdgmimemagic.c: Fallback to getc() if getc_unlocked() is not
	available, GNOME #381499. Thanks to Paul <ephraim_owns@hotmail.com>.

2007-06-01  Christian Neumair  <cneumair@gnome.org>

	* src/xdgmime.c: (xdg_mime_get_mime_type_for_file): Only request two
	MIME types from cache.

	* src/xdgmime.c: (xdg_mime_dump): Dump cache.

	* src/xdgmimecache.c: Warn if building without MMAP support.

2007-06-01  Christian Neumair  <cneumair@gnome.org>

	* src/xdgmime.c: (xdg_lookup_cache_for_file), (xdg_check_dir):
	Fix constant re-creation of memory MIME cache, #7495.

2007-06-01  Christian Neumair  <cneumair@gnome.org>

	* src/xdgmimeglob.c: (_xdg_glob_hash_node_lookup_file_name): Don't
	return NULL MIME types, #5241.

2007-06-01  Christian Neumair  <cneumair@gnome.org>

	* src/xdgmime.c: (xdg_mime_shutdown): Fix cache variable name from last
	commit.

	* src/xdgmime.c: (xdg_mime_unalias_mime_type), (xdg_mime_mime_type_equal):
	* src/xdgmime.h:
	* src/xdgmimemagic.c: (_xdg_mime_magic_lookup_data):
	Define and use private versions of functions that may lead to an
	xdg_mime_init() call and thus to an invalid cache, and a crash - #6824.
	Thanks to Joe Shaw <joeshaw@novell.com>.

2007-06-01  Christian Neumair  <cneumair@gnome.org>

	* src/xdgmime.c: (xdg_mime_shutdown): Free caches, #7496.
	Thanks to Yevgen Muntyan <muntyan@tamu.edu>.
