@@ -41,13 +41,13 @@ typedef enum
 
   
 #ifdef XDG_PREFIX
-#define _xdg_mime_glob_read_from_file         XDG_ENTRY(glob_read_from_file)
-#define _xdg_glob_hash_new                    XDG_ENTRY(hash_new)
-#define _xdg_glob_hash_free                   XDG_ENTRY(hash_free)
-#define _xdg_glob_hash_lookup_file_name       XDG_ENTRY(hash_lookup_file_name)
-#define _xdg_glob_hash_append_glob            XDG_ENTRY(hash_append_glob)
-#define _xdg_glob_determine_type              XDG_ENTRY(determine_type)
-#define _xdg_glob_hash_dump                   XDG_ENTRY(hash_dump)
+#define _xdg_mime_glob_read_from_file         XDG_RESERVED_ENTRY(mime_glob_read_from_file)
+#define _xdg_glob_hash_new                    XDG_RESERVED_ENTRY(glob_hash_new)
+#define _xdg_glob_hash_free                   XDG_RESERVED_ENTRY(glob_hash_free)
+#define _xdg_glob_hash_lookup_file_name       XDG_RESERVED_ENTRY(glob_hash_lookup_file_name)
+#define _xdg_glob_hash_append_glob            XDG_RESERVED_ENTRY(glob_hash_append_glob)
+#define _xdg_glob_determine_type              XDG_RESERVED_ENTRY(glob_determine_type)
+#define _xdg_glob_hash_dump                   XDG_RESERVED_ENTRY(glob_hash_dump)
 #endif
 
 void         _xdg_mime_glob_read_from_file   (XdgGlobHash *glob_hash,
