@@ -33,10 +33,11 @@
 typedef struct XdgParentList XdgParentList;
 
 #ifdef XDG_PREFIX
-#define _xdg_mime_parent_read_from_file        XDG_ENTRY(parent_read_from_file)
-#define _xdg_mime_parent_list_new              XDG_ENTRY(parent_list_new)
-#define _xdg_mime_parent_list_free             XDG_ENTRY(parent_list_free)
-#define _xdg_mime_parent_list_lookup           XDG_ENTRY(parent_list_lookup)
+#define _xdg_mime_parent_read_from_file        XDG_RESERVED_ENTRY(mime_parent_read_from_file)
+#define _xdg_mime_parent_list_new              XDG_RESERVED_ENTRY(mime_parent_list_new)
+#define _xdg_mime_parent_list_free             XDG_RESERVED_ENTRY(mime_parent_list_free)
+#define _xdg_mime_parent_list_lookup           XDG_RESERVED_ENTRY(mime_parent_list_lookup)
+#define _xdg_mime_parent_list_dump             XDG_RESERVED_ENTRY(mime_parent_list_dump)
 #endif
 
 void          _xdg_mime_parent_read_from_file (XdgParentList *list,
