@@ -1,3 +1,10 @@
+2007-06-04  Christian Neumair  <cneumair@gnome.org>
+
+	* src/xdgmime*.[ch]: Rename _caches to _xdg_mime_caches. Also
+	namespace all reserved symbols that are declared in headers using
+	XDG_RESERVED_ENTRY(), #7074 and #11124. Thanks to Yevgen Muntyan
+	<muntyan@tamu.edu> and Joe Marcus Clarke <marcus@freebsd.org>.
+
 2007-06-02  Christian Neumair  <cneumair@gnome.org>
 
 	* src/xdgmime.[ch]: Move xdg_mime_type_unknown to .rodata.
